[gd_scene load_steps=4 format=3 uid="uid://b23vgmpdhqrs3"]

[ext_resource type="Texture2D" uid="uid://rj3fumfekq3l" path="res://assets/rwcircle.png" id="1_g3kcq"]
[ext_resource type="Script" path="res://scripts/bullet.gd" id="1_jvtfu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dqwh1"]
radius = 9.05539

[node name="bullet" type="Area2D"]
script = ExtResource("1_jvtfu")

[node name="circle" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_g3kcq")

[node name="hurtbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dqwh1")

[node name="kill_bullet_timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="owie_timer" type="Timer" parent="."]
wait_time = 0.7

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="kill_bullet_timer" to="." method="_on_kill_bullet_timer_timeout"]
[connection signal="timeout" from="owie_timer" to="." method="_on_owie_timer_timeout"]
